Agregando las traducciones de Dropdown Influencers y Audiovisuales

--- a/index.html
+++ b/index.html
@@ -143,13 +143,16 @@
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="./servicios_gisea/influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
+                                <li><a class="dropdown-item" href="./servicios_gisea/produccion_digital.html"
+                                        data-translate="dropdownAudiovisual">Audio Visual</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./servicios_gisea/empleos.html" data-translate="navTrabaja">Trabaja con <br>Nosotros</a>
+                            <a class="nav-link" href="./servicios_gisea/empleos.html"
+                                data-translate="navTrabaja">Trabaja con <br>Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -195,8 +198,8 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
-                                        class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
+                                        alt="youtube" class="red-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -302,7 +305,8 @@
                 <h1 data-translate="titleSobreNosotros">Sobre Nosotros</h1>
             </div>
             <h3 class="about-alineacion" data-translate="aboutDescription">
-                Somos una agencia digital internacional con presencia en <strong>México, Estados Unidos y España</strong>. Nos especializamos en potenciar tu negocio a través de soluciones de
+                Somos una agencia digital internacional con presencia en <strong>México, Estados Unidos y
+                    España</strong>. Nos especializamos en potenciar tu negocio a través de soluciones de
                 <strong>desarrollo de software, desarrollo web</strong> y la producción de <strong>medios
                     audiovisuales</strong>. Además, contamos con expertos en <strong>Recursos Humanos</strong> para la
                 <strong>capacitación de programadores</strong> y la gestión de <strong>talento de influencers</strong>,
@@ -505,12 +509,12 @@
             </div>
         </div>
     </footer>
-    
+
     <!-- Botón Scroll to Top -->
     <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
         <i class="fa-solid fa-chevron-up"></i>
     </button>
-    
+
     <script src="js/index.js"></script>
     <script src="js/aos/aos.js"></script>
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
