--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Desarrollo Web Profesional - Agencia Digital Internacional | GISEA Agency</title>
-    <meta name="description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo. Paquetes desde $3,000 MXN. ¡Contáctanos hoy!">
+    <meta name="description"
+        content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo. Paquetes desde $3,000 MXN. ¡Contáctanos hoy!">
 
     <meta property="og:title" content="Desarrollo Web Profesional - Agencia Digital Internacional | GISEA Agency">
-    <meta property="og:description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo. Paquetes desde $3,000 MXN.">
+    <meta property="og:description"
+        content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo. Paquetes desde $3,000 MXN.">
     <meta property="og:image" content="img/header_desarollo_web.jpg">
     <meta property="og:url" content="https://giseamex.com/service_desarollo_web.html">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Desarrollo Web Profesional - Agencia Digital Internacional | GISEA Agency">
-    <meta name="twitter:description" content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo.">
+    <meta name="twitter:description"
+        content="Desarrollo web profesional con amplio portafolio internacional. Sitios modernos y funcionales para empresas de todo el mundo.">
     <meta name="twitter:image" content="img/header_desarollo_web.jpg">
 
     <!-- === FAVICON === -->
@@ -79,19 +82,24 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html" data-translate="dropdownRecursos">Recursos
+                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html"
+                                        data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
+                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html"
+                                        data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-                                <li><a class="dropdown-item" href="servicios_gisea/influencers.html"
+                                <li><a class="dropdown-item" href="./servicios_gisea/influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
+                                <li><a class="dropdown-item" href="./servicios_gisea/produccion_digital.html"
+                                        data-translate="dropdownAudiovisual">Audio Visual</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./servicios_gisea/empleos.html" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                            <a class="nav-link" href="./servicios_gisea/empleos.html"
+                                data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -137,8 +145,8 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
-                                        class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
+                                        alt="youtube" class="red-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -202,7 +210,8 @@
                         <ul>
                             <li class="d-flex align-items-center justify-content-between hosting-highlight">
                                 <div class="feature-text-container">
-                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio y Hosting</span>
+                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio
+                                        y Hosting</span>
                                 </div>
                                 <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
                             </li>
@@ -232,7 +241,8 @@
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="servicios_gisea/negocios_pequenos.html" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
+                            <a href="servicios_gisea/negocios_pequenos.html" class="cta-button"
+                                data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -245,7 +255,8 @@
                         <ul>
                             <li class="d-flex align-items-center justify-content-between hosting-highlight">
                                 <div class="feature-text-container">
-                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio y Hosting</span>
+                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio
+                                        y Hosting</span>
                                 </div>
                                 <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
                             </li>
@@ -278,7 +289,8 @@
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="servicios_gisea/empresas_medianas.html" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
+                            <a href="servicios_gisea/empresas_medianas.html" class="cta-button"
+                                data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -292,7 +304,8 @@
                         <ul>
                             <li class="d-flex align-items-center justify-content-between hosting-highlight">
                                 <div class="feature-text-container">
-                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio y Hosting</span>
+                                    <span data-translate="packageFeatureHosting" class="hosting-text">3 años de Dominio
+                                        y Hosting</span>
                                 </div>
                                 <img src="icons/check_icon.svg" alt="" class="icon-check-hospedaje">
                             </li>
@@ -325,7 +338,8 @@
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="servicios_gisea/empresas_grandes_corp.html" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
+                            <a href="servicios_gisea/empresas_grandes_corp.html" class="cta-button"
+                                data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -373,16 +387,26 @@
                 <div class="portafolio-title clientes-hover">
                     <div class="number">
                         <h2>10</h2>
-                        <img src="icons/bandera_usa.png" class="flag flag-usa animate__animated" data-bs-toggle="tooltip" title="Estados Unidos" />
-                        <img src="icons/bandera_venezuela.png" class="flag flag-venezuela animate__animated" data-bs-toggle="tooltip" title="Venezuela" />
-                        <img src="icons/bandera_mex.png" class="flag flag-mexico animate__animated" data-bs-toggle="tooltip" title="México" />
-                        <img src="icons/bandera_jpn.png" class="flag flag-japan animate__animated" data-bs-toggle="tooltip" title="Japón" />
-                        <img src="icons/bandera_esp.png" class="flag flag-esp animate_animated" data-bs-toggle="tooltip" title="España">
-                        <img src="icons/bandera_argentina.png" class="flag flag-arg animate_animated" data-bs-toggle="tooltip" title="Argentina">
-                        <img src="icons/bandera_brazil.png" class="flag flag-brazil animate_animated" data-bs-toggle="tooltip" title="Brasil">
-                        <img src="icons/bandera_australia.png" class="flag flag-australia animate_animated" data-bs-toggle="tooltip" title="Australia">
-                        <img src="icons/bandera_italia.png" class="flag flag-italia animate_animated" data-bs-toggle="tooltip" title="Italia">
-                        <img src="icons/bandera_canada.png" class="flag flag-canada animate_animated" data-bs-toggle="tooltip" title="Canadá">
+                        <img src="icons/bandera_usa.png" class="flag flag-usa animate__animated"
+                            data-bs-toggle="tooltip" title="Estados Unidos" />
+                        <img src="icons/bandera_venezuela.png" class="flag flag-venezuela animate__animated"
+                            data-bs-toggle="tooltip" title="Venezuela" />
+                        <img src="icons/bandera_mex.png" class="flag flag-mexico animate__animated"
+                            data-bs-toggle="tooltip" title="México" />
+                        <img src="icons/bandera_jpn.png" class="flag flag-japan animate__animated"
+                            data-bs-toggle="tooltip" title="Japón" />
+                        <img src="icons/bandera_esp.png" class="flag flag-esp animate_animated" data-bs-toggle="tooltip"
+                            title="España">
+                        <img src="icons/bandera_argentina.png" class="flag flag-arg animate_animated"
+                            data-bs-toggle="tooltip" title="Argentina">
+                        <img src="icons/bandera_brazil.png" class="flag flag-brazil animate_animated"
+                            data-bs-toggle="tooltip" title="Brasil">
+                        <img src="icons/bandera_australia.png" class="flag flag-australia animate_animated"
+                            data-bs-toggle="tooltip" title="Australia">
+                        <img src="icons/bandera_italia.png" class="flag flag-italia animate_animated"
+                            data-bs-toggle="tooltip" title="Italia">
+                        <img src="icons/bandera_canada.png" class="flag flag-canada animate_animated"
+                            data-bs-toggle="tooltip" title="Canadá">
                     </div>
                     <h3 data-translate="portfolioClients">Clientes</h3>
                 </div>
@@ -734,10 +758,11 @@
                 </div>
                 <div class="footer-bottom d-flex justify-content-between align-items-center">
                     <div class="footer-contact">
-                        <a href="https://wa.me/5561856627" target="_blank" alt="whatsapp" class="red-social-footer whatsapp-contact">
-                        <i class="fa-brands fa-whatsapp fa-xl"></i>
-                        <span class="whatsapp-text">WhatsApp</span>
-                    </a>
+                        <a href="https://wa.me/5561856627" target="_blank" alt="whatsapp"
+                            class="red-social-footer whatsapp-contact">
+                            <i class="fa-brands fa-whatsapp fa-xl"></i>
+                            <span class="whatsapp-text">WhatsApp</span>
+                        </a>
                     </div>
                     <ul class="footer-links">
                         <li><a href="index.html" data-translate="footerInicio">Inicio</a></li>
@@ -768,12 +793,12 @@
             </div>
         </footer>
     </section>
-    
+
     <!-- Botón Scroll to Top -->
     <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
         <i class="fa-solid fa-chevron-up"></i>
     </button>
-    
+
     <script src="js/index.js"></script>
     <script src="js/portafolio.js"></script>
     <script src="js/aos/aos.js"></script>
