--- a/servicios_gisea/empresas_grandes_corp.html
+++ b/servicios_gisea/empresas_grandes_corp.html
@@ -12,7 +12,8 @@
     <!-- Título principal - Aparece en Google y pestaña del navegador (50-60 chars) -->
     <title>Desarrollo Web Corporativo para Empresas Grandes desde $9,999 MXN | GISEA</title>
     <!-- Descripción en resultados de Google - Influye en clicks (140-160 chars) -->
-    <meta name="description" content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido. ¡Soluciones enterprise!">
+    <meta name="description"
+        content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido. ¡Soluciones enterprise!">
 
     <!-- === OPEN GRAPH (Facebook, LinkedIn, WhatsApp) === -->
     <!-- Tipo de contenido para redes sociales -->
@@ -20,7 +21,8 @@
     <!-- Título al compartir (40-60 chars) -->
     <meta property="og:title" content="Desarrollo Web Corporativo para Empresas Grandes desde $9,999 MXN | GISEA">
     <!-- Descripción al compartir (130-160 chars) -->
-    <meta property="og:description" content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido para empresas grandes.">
+    <meta property="og:description"
+        content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido para empresas grandes.">
     <!-- Imagen al compartir (1200x630px recomendado) -->
     <meta property="og:image" content="https://giseamex.com/img/servicios/empresas_grandes.png">
     <!-- URL oficial de la página -->
@@ -34,7 +36,8 @@
     <!-- Título en Twitter (50-60 chars) -->
     <meta name="twitter:title" content="Desarrollo Web Corporativo para Empresas Grandes desde $9,999 MXN | GISEA">
     <!-- Descripción en Twitter (120-160 chars) -->
-    <meta name="twitter:description" content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido para empresas grandes.">
+    <meta name="twitter:description"
+        content="Sitios web corporativos premium desde $9,999 MXN. Diseño profesional, código optimizado, 3 correos corporativos y hospedaje incluido para empresas grandes.">
     <!-- Imagen en Twitter (1200x600px recomendado) -->
     <meta name="twitter:image" content="https://giseamex.com/img/servicios/empresas_grandes.png">
 
@@ -115,13 +118,16 @@
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
+                                <li><a class="dropdown-item" href="produccion_digital.html"
+                                        data-translate="dropdownAudiovisual">Audio Visual</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
+                                Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -167,8 +173,8 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
-                                        class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
+                                        alt="youtube" class="red-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -218,8 +224,8 @@
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/empresas-grandes/negocios_grandes_2.jpg"
-                            alt="Holding Empresarial" class="package-image">
+                        <img src="../img/servicios/empresas-grandes/negocios_grandes_2.jpg" alt="Holding Empresarial"
+                            class="package-image">
                         <div class="package-overlay">
                             <div class="package-text">
                                 <h4>Holding Empresarial</h4>
@@ -229,8 +235,8 @@
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/empresas-medianas/negocios_med_3.jpg"
-                            alt="Hospital Privado" class="package-image">
+                        <img src="../img/servicios/empresas-medianas/negocios_med_3.jpg" alt="Hospital Privado"
+                            class="package-image">
                         <div class="package-overlay">
                             <div class="package-text">
                                 <h4>Hospital Privado</h4>
@@ -240,8 +246,8 @@
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/empresas-medianas/negocios_med_4.jpg"
-                            alt="Universidad Privada" class="package-image">
+                        <img src="../img/servicios/empresas-medianas/negocios_med_4.jpg" alt="Universidad Privada"
+                            class="package-image">
                         <div class="package-overlay">
                             <div class="package-text">
                                 <h4>Universidad Privada</h4>
@@ -251,8 +257,8 @@
                 </div>
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/negocios-pequenos/negocios_peq_2.png"
-                            alt="Banco Regional" class="package-image">
+                        <img src="../img/servicios/negocios-pequenos/negocios_peq_2.png" alt="Banco Regional"
+                            class="package-image">
                         <div class="package-overlay">
                             <div class="package-text">
                                 <h4>Banco Regional</h4>
@@ -296,7 +302,8 @@
                         <li>1 formulario de contacto</li>
                         <li>SEO (Posicionamiento en Buscadores)</li>
                         <li>Enlace a Redes Sociales (no incluye creación de cuentas)</li>
-                        <li>2 cambios de información al mes se considera como un cambio de información desde una palabra, una imagen o hasta el contenido completo de una sola página.</li>
+                        <li>2 cambios de información al mes se considera como un cambio de información desde una
+                            palabra, una imagen o hasta el contenido completo de una sola página.</li>
                         <li>Diseño responsivo para diferentes dispositivos (teléfonos y tabletas)</li>
                         <li>Consejos para elegir un dominio web</li>
                         <li>Asesoría de imagen para el sitio web</li>
@@ -325,8 +332,7 @@
 
                         <!-- Card paquete 2 -->
                         <a href="empresas_medianas.html" class="pkg-card d-flex align-items-center gap-3">
-                            <img src="../img/servicios/empresas_medianas.png" alt="Empresas grandes"
-                                class="pkg-thumb">
+                            <img src="../img/servicios/empresas_medianas.png" alt="Empresas grandes" class="pkg-thumb">
                             <div class="pkg-body">
                                 <div class="pkg-subtitle">Empresas Medianas</div>
                                 <div class="pkg-price">$6,000 MXN</div>
@@ -853,7 +859,7 @@
             });
         });
     </script>
-    
+
     <!-- Botón Scroll to Top -->
     <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
         <i class="fa-solid fa-chevron-up"></i>
