--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Marketing de Influencers en México e Internacional | GISEA</title>
-    <meta name="description" content="Potenciamos tu marca con campañas de influencers en México y a nivel internacional. Estrategias para Instagram, TikTok y YouTube que generan impacto real.">
+    <meta name="description"
+        content="Potenciamos tu marca con campañas de influencers en México y a nivel internacional. Estrategias para Instagram, TikTok y YouTube que generan impacto real.">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Marketing de Influencers en México e Internacional | GISEA">
-    <meta property="og:description" content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
+    <meta property="og:description"
+        content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
     <meta property="og:image" content="https://giseamex.com/img/servicios/influencers/header-influencers.png">
     <meta property="og:url" content="https://zonoxply29.github.io/Gisea_web/servicios_gisea/influencers.html">
     <meta property="og:locale" content="es_MX">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Marketing de Influencers en México e Internacional | GISEA">
-    <meta name="twitter:description" content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
+    <meta name="twitter:description"
+        content="Conectamos tu marca con los influencers correctos para campañas de alto impacto en México y el mundo.">
     <meta name="twitter:image" content="https://giseamex.com/img/servicios/influencers/header-influencers.png">
 
     <!-- === FAVICON === -->
@@ -83,13 +86,16 @@
                                         data-translate="dropdownCapacitacion">Capacitación IT</a></li>
                                 <li><a class="dropdown-item" href="influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
+                                <li><a class="dropdown-item" href="produccion_digital.html"
+                                        data-translate="dropdownAudiovisual">Audio Visual</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
+                                Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -135,8 +141,8 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
-                                        class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
+                                        alt="youtube" class="red-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -162,13 +168,15 @@
         </nav>
     </header>
     <!-- HEADER INFLUENCERS-->
-    <section class="influencers-header" style="background-image: url('../img/servicios/influencers/header_influencers.png');">
+    <section class="influencers-header"
+        style="background-image: url('../img/servicios/influencers/header_influencers.png');">
         <div class="container">
             <div class="row align-items-center min-vh-100">
                 <div class="col-12 col-lg-8">
                     <div class="text-center text-md-start">
                         <h1 class="mb-3 mb-md-4">Conviértete en la voz que inspira a millones.</h1>
-                        <p class="mb-4 mb-md-5">Unimos marcas e influencers para potenciar proyectos que inspiran e impactan.</p>
+                        <p class="mb-4 mb-md-5">Unimos marcas e influencers para potenciar proyectos que inspiran e
+                            impactan.</p>
                         <div class="d-flex justify-content-center justify-content-md-start">
                             <a href="#contacto" class="btn-conoce-conecta">
                                 Conoce y Conecta
@@ -234,19 +242,22 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: repeating-linear-gradient(
-                45deg,
-                transparent,
-                transparent 10px,
-                rgba(255,255,255,0.05) 10px,
-                rgba(255,255,255,0.05) 20px
-            );
+            background: repeating-linear-gradient(45deg,
+                    transparent,
+                    transparent 10px,
+                    rgba(255, 255, 255, 0.05) 10px,
+                    rgba(255, 255, 255, 0.05) 20px);
             animation: construccionPattern 20s linear infinite;
         }
 
         @keyframes construccionPattern {
-            0% { transform: translateX(-20px) translateY(-20px); }
-            100% { transform: translateX(20px) translateY(20px); }
+            0% {
+                transform: translateX(-20px) translateY(-20px);
+            }
+
+            100% {
+                transform: translateX(20px) translateY(20px);
+            }
         }
 
         .construccion-content {
@@ -265,9 +276,22 @@
         }
 
         @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-10px); }
-            60% { transform: translateY(-5px); }
+
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-10px);
+            }
+
+            60% {
+                transform: translateY(-5px);
+            }
         }
 
         .construccion-title {
@@ -275,7 +299,7 @@
             font-size: 2.5rem;
             font-weight: 900;
             margin-bottom: 15px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .construccion-subtitle {
@@ -300,10 +324,10 @@
             align-items: center;
             gap: 10px;
             padding: 20px;
-            background: rgba(255,255,255,0.15);
+            background: rgba(255, 255, 255, 0.15);
             border-radius: 15px;
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.3);
+            border: 1px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease;
             font-family: "Gotham Black", sans-serif;
             font-weight: 700;
@@ -311,7 +335,7 @@
 
         .feature-item:hover {
             transform: translateY(-5px);
-            background: rgba(255,255,255,0.25);
+            background: rgba(255, 255, 255, 0.25);
         }
 
         .feature-item i {
@@ -327,24 +351,29 @@
             width: 100%;
             max-width: 400px;
             height: 12px;
-            background: rgba(255,255,255,0.2);
+            background: rgba(255, 255, 255, 0.2);
             border-radius: 12px;
             margin: 0 auto 10px;
             overflow: hidden;
-            border: 1px solid rgba(255,255,255,0.3);
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .progress-fill {
             width: 85%;
             height: 100%;
-            background: linear-gradient(90deg, #FFFFFF, rgba(255,255,255,0.8));
+            background: linear-gradient(90deg, #FFFFFF, rgba(255, 255, 255, 0.8));
             border-radius: 12px;
             animation: progressGlow 2s ease-in-out infinite alternate;
         }
 
         @keyframes progressGlow {
-            from { box-shadow: 0 0 10px rgba(255,255,255,0.5); }
-            to { box-shadow: 0 0 25px rgba(255,255,255,0.8), 0 0 35px rgba(255,255,255,0.6); }
+            from {
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            }
+
+            to {
+                box-shadow: 0 0 25px rgba(255, 255, 255, 0.8), 0 0 35px rgba(255, 255, 255, 0.6);
+            }
         }
 
         .progress-text {
