--- a/servicios_gisea/capacitacion_it.html
+++ b/servicios_gisea/capacitacion_it.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Capacitación IT: Asesorías en Lenguajes y Frameworks | GISEA</title>
-    <meta name="description" content="Eleva tus habilidades con nuestra capacitación IT. Ofrecemos cursos y asesorías en HTML, JS, PHP, Node.js, MySQL y más. ¡Inicia tu aprendizaje hoy!">
+    <meta name="description"
+        content="Eleva tus habilidades con nuestra capacitación IT. Ofrecemos cursos y asesorías en HTML, JS, PHP, Node.js, MySQL y más. ¡Inicia tu aprendizaje hoy!">
 
     <meta property="og:title" content="Capacitación Profesional en IT | GISEA">
-   <meta property="og:description" content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
+    <meta property="og:description"
+        content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
     <meta property="og:image" content="https://giseamex.com/img/header-capacitacion-it.png">
     <meta property="og:url" content="https://giseamex.com/capacitacion_it.html">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Capacitación Profesional en IT | GISEA">
-    <meta name="twitter:description" content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
+    <meta name="twitter:description"
+        content="Domina las tecnologías más demandadas con nuestros cursos y asesorías especializadas en desarrollo web y bases de datos.">
     <meta name="twitter:image" content="https://giseamex.com/img/header-capacitacion-it.png">
 
     <!-- === FAVICON === -->
@@ -88,17 +91,18 @@
                                 <li><a class="dropdown-item" href="capacitacion_it.html"
                                         data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-
                                 <li><a class="dropdown-item" href="influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
-
+                                <li><a class="dropdown-item" href="produccion_digital.html"
+                                        data-translate="dropdownAudiovisual">Audio Visual</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
+                                Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -144,8 +148,8 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
-                                        class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
+                                        alt="youtube" class="red-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -1316,7 +1320,7 @@
                 </div>
                 <div class="footer-bottom d-flex justify-content-between align-items-center">
                     <div class="footer-contact">
-                        <a href="https://wa.me/5561856627"target="_blank" alt="whatsapp"
+                        <a href="https://wa.me/5561856627" target="_blank" alt="whatsapp"
                             class="red-social-footer whatsapp-contact">
                             <i class="fa-brands fa-whatsapp fa-xl"></i>
                             <span class="whatsapp-text">WhatsApp</span>
