--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Desarrollo Web para Negocios Pequeños desde $3,000 MXN | GISEA</title>
-    <meta name="description" content="Sitios web profesionales para negocios pequeños y PYMEs desde $3,000 MXN. Hospedaje incluido por 3 años, plataforma moderna y funcional. ¡Impulsa tu negocio digital!">
+    <meta name="description"
+        content="Sitios web profesionales para negocios pequeños y PYMEs desde $3,000 MXN. Hospedaje incluido por 3 años, plataforma moderna y funcional. ¡Impulsa tu negocio digital!">
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Desarrollo Web para Negocios Pequeños desde $3,000 MXN | GISEA">
-    <meta property="og:description" content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
+    <meta property="og:description"
+        content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
     <meta property="og:image" content="https://giseamex.com/img/web-service/negocios_pequenos.png">
     <meta property="og:url" content="https://giseamex.com/desarrollo-web/negocios_pequenos.html">
     <meta property="og:locale" content="es_MX">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Desarrollo Web para Negocios Pequeños desde $3,000 MXN | GISEA">
-    <meta name="twitter:description" content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
+    <meta name="twitter:description"
+        content="Sitios web profesionales para negocios pequeños y PYMEs. Hospedaje incluido por 3 años, plataforma moderna y funcional desde $3,000 MXN.">
     <meta name="twitter:image" content="https://giseamex.com/img/web-service/negocios_pequenos.png">
 
     <!-- === FAVICON === -->
@@ -97,13 +100,16 @@
                                         IT</a></li>
                                 <li><a class="dropdown-item" href="influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
+                                <li><a class="dropdown-item" href="produccion_digital.html"
+                                        data-translate="dropdownAudiovisual">Audio Visual</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
+                                Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -149,8 +155,8 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtube"
-                                        class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
+                                        alt="youtube" class="red-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -189,8 +195,8 @@
             <div class="owl-carousel owl-theme packages-carousel">
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/negocios-pequenos/negocios_peq_1.png"
-                            alt="Emprendimientos" class="package-image">
+                        <img src="../img/servicios/negocios-pequenos/negocios_peq_1.png" alt="Emprendimientos"
+                            class="package-image">
                         <div class="package-overlay">
                             <div class="package-text">
                                 <h4>Emprendimientos</h4>
@@ -835,7 +841,7 @@
             });
         });
     </script>
-    
+
     <!-- Botón Scroll to Top -->
     <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
         <i class="fa-solid fa-chevron-up"></i>
